roles/servers/files/10.32.10.28/iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

-A PREROUTING -d 10.32.10.32 -p tcp -m tcp --dport 554 -j DNAT --to-destination 10.32.10.95:554
-A POSTROUTING -d 10.32.10.95 -p tcp -m tcp --dport 554 -j SNAT --to-source 10.32.10.32

COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LOGGING - [0:0]

#default policy for input
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.32.10.95 -i eth0 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i eth0 -p udp -m state --state ESTABLISHED,RELATED -j ACCEPT

-A FORWARD -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT

# RTSP
-A FORWARD -s 10.32.5.0/24 -p tcp -m tcp --dport 554 -d 10.32.10.95  -j ACCEPT
-A FORWARD -s 10.32.14.0/24 -p tcp -m tcp --dport 554 -d 10.32.10.95  -j ACCEPT
-A FORWARD -s 10.32.8.0/24 -p tcp -m tcp --dport 554 -d 10.32.10.95 -j ACCEPT

# Allow incoming and outgoing ssh
-A INPUT -i eth0 -p tcp -s 10.32.16.64/26 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.5.0/24 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.16.179 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.16.180 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.10.26 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.100.25 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 22987 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp --dport 22 -m state --state NEW -j ACCEPT

#Allow incoming/outgoing ICMP
#-A INPUT -i eth0 -p icmp -m limit --limit 2/min --limit-burst 5 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p icmp -m limit --limit 2/min --limit-burst 5 -j ACCEPT
-A OUTPUT -o eth0 -p icmp -m state --state NEW,ESTABLISHED -j ACCEPT

#Allow incoming/outgoing HTTP/S access
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 544 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.15.190 --dport 80 -m state --state NEW -j ACCEPT

#Allow incoming FTP control (990) and FTP data (60500 - 60505)
#A INPUT -i eth0 -p tcp -m tcp --dport 990 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 990 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 20 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 21 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 1024:65535 --dport 20:65535 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
#-A INPUT -i eth0 -p tcp -m tcp --dport 21 -j ACCEPT
#-A INPUT -i eth0 -p tcp -m multiport --dports 60500:60505 -j ACCEPT
#-A INPUT -i eth0 -p tcp -m tcp -s 10.32.5.15 -j ACCEPT

#Allow incoming monit monitoring access
-A INPUT -i eth0 -p tcp -s 10.32.16.64/26 --dport 2812 -m state --state NEW -j ACCEPT
#-A INPUT -i eth0 -p tcp --dport 2812 -m state --state NEW -j ACCEPT

#Allow incoming/outgoing munin-node monitoring using stunnel access
-A INPUT -i eth0 -p tcp -s 10.32.16.179 --dport 4949 -m state --state NEW -j ACCEPT
#-A INPUT -i eth0 -p tcp --dport 4948 -m state --state NEW -j ACCEPT
#Allow other IP 

#Allow outgoing 
-A OUTPUT -d 10.32.10.8 -p tcp -m tcp -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.26 -p tcp -m tcp -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.27 -p tcp -m tcp -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.89 -p tcp -m tcp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.89 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.10 -p tcp -m tcp --dport 995 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.10 -p tcp -m tcp --dport 110 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.72 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0:1 -p tcp -m state --state NEW,ESTABLISHED -j ACCEPT

#Allow outgoing to FTP Client
#-A OUTPUT -o eth0 -p tcp --sport 989 -m state --state NEW,ESTABLISHED -j ACCEPT

#Allow connection to DB and Queue server
-A OUTPUT -o eth0 -p tcp -d 10.32.10.7 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.10.9 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.100.8 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.100.19 -m state --state NEW,ESTABLISHED -j ACCEPT

#Allow incoming SNMP request
-A INPUT -i eth0 -p udp -s 10.32.16.180 --dport 161 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p udp -s 10.32.16.179 --dport 161 -m state --state NEW -j ACCEPT

#Allow access DNS server and NTP and SYSLOG-NG and Samhain
-A OUTPUT -o eth0 -p udp -d 10.32.10.54 --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p udp -d 10.32.10.53 --dport 123 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.100.25 --dport 11 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.100.25 --dport 49777 -m state --state NEW -j ACCEPT

#Allow access SMTP
-A OUTPUT -o eth0 -p tcp -d 10.32.10.11 --dport 25 -m state --state NEW -j ACCEPT

#default policy for output
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p udp -m state --state NEW,ESTABLISHED -j ACCEPT

#default policy for LOGGING
-A INPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 5
-A LOGGING -j DROP

COMMIT
